# recipes

./: .prettierignore  CLAUDE.md  Makefile  README.adoc  README.md  TOTRY.md  TO_ADD.md  contents.md  index-recipes  justfile  package.json  recipes.json  template.yaml
baking/: 65%_hydration_dough_pita_pizza.yaml  burger_bun.yaml  cream_biscuits.yaml  focaccia.yaml  galette_des_rois.yaml  no_knead_bread.yaml  pie_crust.yaml  pizza.yaml  quick_and_easy_english_muffins.yaml  rustic_mushroom_tart.yaml  scones.yaml
baking/cake/: baked_cheesecake.yaml  banana_bread.yaml  old_fashioned_strawberry_cake.md
baking/cookies/: corn_nut_brittle_cookies.md  hijab_n_aprons_levain_chocolate_walnut_cookies.md  oat_and_pecan_brittle_cookies.md  old_fashioned_macarons.md  pandan_coconut_cookies.yaml  raisin_shortbread.yaml  rugelach.md
desserts/: creme_caramel.yaml  vanilla_ice_cream.yml
meals/: biryani.yaml  coconut_rice.yml  holiday_sausage_stuffing.yaml  malaysian_soft_boiled_egg.yaml  pancakes.yaml  pork_stir_fry.yaml  spaetzle.yaml
ramen/: 2020-08-13-chicken-shoyu-chintan.yaml
recipe_index/: Cargo.toml  todos.md
recipe_index/src/: filters.rs  git.rs  lib.rs  main.rs  model.rs  output.rs  serialization.rs
recipe_index/src/storage/: id_tree.rs  mod.rs
unsuccessful/: bbq_sauce.yaml  coffee_rib_rub.yaml  gelatin_mango_pudding.yaml  masa_harina_corn_cookies.md
untested/: almond_fruit_tart.md  almond_oat_cookies.md  corn_bread.md  corn_cookies.md  gelatin_mango_pudding.yaml  hijab_n_aprons_levain_chocolate_walnut_cookies.md  pandan_coconut_cookies.yaml  yeasted_cake.md
(+94 files in other folders)
