[package]
name = "recipe_index"
version = "0.1.0"
authors = ["Jonathan Fok kan <jfokkan@gmail.com>"]
edition = "2018"

[dependencies]
walkdir = "2"
id_tree = "1.2.0"

serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
serde_json = "1.0"

inflections = "1"
chrono = { version = "0.4", features = ["serde"] }